amélioration de la page références par rapport au retour reçu

--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -13,11 +13,12 @@
 	</header>
 	<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}"></section>
 	<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
-		<div id="vamos" class="large ref">
+		<div id="vamos" class="large ref {% if browser.browser == "IE" %}IE {% endif %}">
 			<div class="mask"></div>
 			<div class="pictures" data-target='vamos'>
 				<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="logo Vamos">
 				<img class="maquette-ref" src="/assets/img/references/fiche-contact2.png" alt="maquette vamos">
+        <i class="arrow icon-keyboard_arrow_right"></i>
 					<!--
 					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
@@ -38,11 +39,12 @@
 				</div>
 			</div>
 		</div>
-		<div id="amnesty" class="ref">
+		<div id="amnesty" class="ref {% if browser.browser == "IE" %}IE {% endif %}">
 			<div class="mask"></div>
 			<div class="pictures" data-target='amnesty'>
 				<img class="logo-ref svg" src="/assets/img/references/amnesty-logo-black.svg" alt="logo amnesty">
 				<img class="maquette-ref" src="/assets/img/references/amnesty-iphone.png" alt="maquette amnesty">
+        <i class="arrow icon-keyboard_arrow_left"></i>
 					<!--
 					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
@@ -71,12 +73,13 @@
 				</div>
 			</div>
 		</div>
-		<div id="horizon" class="large ref">
+		<div id="horizon" class="large ref {% if browser.browser == "IE" %}IE {% endif %}">
 			<div class="mask"></div>
 			<div class="pictures" data-target='horizon'>
 				<img class="logo-ref svg" src="/assets/img/references/horizon-logo.svg" alt="Logo COP 21">
 				<img class="maquette-ref" src="/assets/img/references/horizon-home.png" alt="Maquette Horizon">
 				<a href="http://cop21horizon.com/fr/" target="_blank" class="ref-btn link-ref"><i class="icon-link"></i></a>
+        <i class="arrow icon-keyboard_arrow_right"></i>
 					<!--
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
 				-->
@@ -100,12 +103,13 @@
 				</div>
 			</div>
 		</div>
-		<div id="FFB-public" class="large ref">
+		<div id="FFB-public" class="large ref {% if browser.browser == "IE" %}IE {% endif %}">
 			<div class="mask"></div>
 			<div class="pictures" data-target='FFB-public'>
 				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="logo FFB">
 				<img class="maquette-ref" src="/assets/img/references/ffb-public-home.png" alt="maquette FFB public">
 				<a href="https://www.ffbridge.fr/" target="_blank" class="ref-btn link-ref"><i class="icon-link"></i></a>
+        <i class="arrow icon-keyboard_arrow_left"></i>
 					<!--
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
 				-->
@@ -129,11 +133,12 @@
 				</div>
 			</div>
 		</div>
-		<div id="FFB" class="large ref">
+		<div id="FFB" class="large ref {% if browser.browser == "IE" %}IE {% endif %}">
 			<div class="mask"></div>
 			<div class="pictures" data-target='FFB'>
 				<img class="logo-ref svg" src="/assets/img/references/logo-ffb.svg" alt="logo FFB">
 				<img class="maquette-ref" src="/assets/img/references/ffb-member-fiche.png" alt="maquette FFB">
+        <i class="arrow icon-keyboard_arrow_right"></i>
 					<!--
 					<a href="#" class="ref-btn link-ref"><i class="icon-link"></i></a>
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
@@ -154,12 +159,13 @@
 				</div>
 			</div>
 		</div>
-		<div id="michelin" class="large ref">
+		<div id="michelin" class="large ref {% if browser.browser == "IE" %}IE {% endif %}">
 			<div class="mask"></div>
 			<div class="pictures" data-target='michelin'>
 				<img class="logo-ref svg" src="/assets/img/references/logo-michelin.svg" alt="Logo Michelin">
 				<img class="maquette-ref" src="/assets/img/references/michelin-home.png" alt="Maquette Michelin">
 				<a href="http://simgm.michelin.fr/fr/" target="_blank" class="ref-btn link-ref"><i class="icon-link"></i></a>
+        <i class="arrow icon-keyboard_arrow_left"></i>
 					<!--
 					<a href="#" class="ref-btn more-ref"><i class="icon-add"></i></a>
 				-->
