--- a/web/assets/scss/sections/references.scss
+++ b/web/assets/scss/sections/references.scss
@@ -7,597 +7,118 @@ div.references{
 }
 .landing-references{ background-image: url('../img/landing-bg-agile.jpg'); background-size: cover; background-position: 50% 50%; }
 
-@keyframes look-even {
-  0%   {transform: skewX(25deg) translateX(0px);}
-  20%   {transform: skewX(25deg) translateX(-5px);}
-  30%   {transform: skewX(25deg) translateX(0px);}
-  100%   {transform: skewX(25deg) translateX(0px);}
-}
-@keyframes look-odd {
-  0%   {transform: skewX(25deg) translateX(0px);}
-  20%   {transform: skewX(25deg) translateX(5px);}
-  30%   {transform: skewX(25deg) translateX(0px);}
-  100%   {transform: skewX(25deg) translateX(0px);}
-}
-
 .ref{
   position: relative;
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #eff0f1;
-
-  .pictures{
-    margin: 0;
-    padding: 0;
-    display: block;
-    width: 75%;
-    z-index: 10;
+  background-color: #2c313f;
+  color: #eff0f1;
+  height: 500px;
+  .wrapper{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     overflow: hidden;
-    transform-style: preserve-3d;
-
-    img{ z-index: 10; }
   }
-  .right-mask{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-
-    .infos{
-      flex: 1 0 0;
-      position: relative;
-      top: 0;
-      left: 0;
-      display: flex;
-      display: -webkit-flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: flex-start;
-      transition: all .3s ease-out;
-
-      h3, h4, h5, p{ padding: 0; margin: 0; }
-      h3{
-        font-size: 3rem;
-        line-height: 3rem;
-        font-weight: normal;
-        margin-bottom: 4px;
-      }
-      ul{
-        font-size: 1.2rem;
-        margin: 1rem 0;
-      }
-      p{
-        font-size: 1.2rem;
-        line-height: 1.5;
-      }
-      a{
-        color: darken(#2c313f, 30%);
-        font-weight: normal;
-        margin: 0;
-        margin-top: 4px;
-        &:hover{
-          text-decoration: underline;
-        }
-      }
-    }
+  .bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom center;
+    background-size: 100%;
+    transform: scale(1);
+    overflow: hidden;
+    transition: transform .8s .65s $easing;
   }
-}
-
-@media #{$small-only} {
-  .pictures{
-    .logo-ref{
-      max-width: 300px;
-      margin-bottom: 20px;
-    }
-    .maquette-ref{ height: auto; }
-  }
-}
-
-@media #{$small-up} {
-  .ref{
-    height: auto;
-    .mask{ display: none; }
-    .pictures{
-      position: relative;
-      top: 0;
-      width: 100%;
-      padding: 15px;
-      .ref-btn{display:none;}
-    }
-    .right-mask{
-      position: relative;
+  .mask{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    clip-path: inset(0% 100% 0% 0%);
+    -moz-clip-path: inset(0% 100% 0% 0%);
+    -webkit-clip-path: inset(0% 100% 0% 0%);
+    transition: all .8s .65s $easing;
+    .cover{
+      position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      .infos{
-        padding: 20px;
-        .ref-btn-mobile{ display: inline-block; }
-      }
-    }
-  }
-}
-
-@media #{$medium-only} {
-  .ref{
-    .logo-ref{
-      position: relative;
-      margin-bottom: 20px;
-      max-width: 300px;
-    }
-    .maquette-ref{
-      display: block;
-      max-width: 60%;
-      height: auto;
-      margin: 0 auto;
-    }
-  }
-}
-
-@media #{$large-up} {
-  .ref{
-    height: 400px;
-    margin-bottom: 100px;
-    .mask{
-      display: block;
-      position: absolute;
-      top: -1px;
-      width: 350px;
-      height: 101%;
-      transform: skewX(-25deg);
-      background-color: #eff0f1;
-      z-index: 20;
-    }
-    .pictures{
-      position: absolute;
-      top: 0;
-      width: 80%;
       height: 100%;
-      transform: translateX(0%) skewX(-25deg);
+      background-repeat: no-repeat;
+      background-position: bottom center;
+      background-size: 100%;
+      transform: scale(1);
       transition: transform .8s .65s $easing;
-      z-index: 10;
-
-      img{ height: 400px; }
-      svg, img{
-        display: inline-block;
-        transform: skewX(25deg);
-      }
-      .maquette-ref{
-        height: 100%;
-        transform:translateY(0%) skewX(25deg);
-        z-index: 5;
-      }
-
-      .ref-btn{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        top: 0;
-        right: 0;
-        height: 100%;
-        width: 70px;
-        overflow: hidden;
-        transition: background-color .5s 0s $easing;
-        cursor: pointer;
-        z-index: 10;
-
-        i{
-          font-size: 1.5em;
-          transform: skewX(25deg);
-          transition: color .5s ease-out;
-        }
-      }
-      .link-ref{ right: -1px; }
-      .more-ref{ right: 48px; }
     }
-    &:nth-child(odd){
-      .mask{ left: -200px; }
-      .pictures{
-        left: 150px;
-        transform: skewX(-25deg) translateX(-80%);
-        .arrow{
-          position: absolute;
-          bottom: 10px;
-          right: 0;
-          font-size: 2.5em;
-          transform: skewX(25deg);
-          color: #eff0f1;
-          opacity: 1;
-          transition: opacity .3s 0s $easing;
-          animation: look-odd 4s ease-out 0s infinite both;
-        }
-        .logo-ref{
-          @media #{$large-up} {
-            transform: translateX(0px) skewX(25deg);
-            transition: transform .5s .45s $easing;
-          }
-        }
-        &:hover{
-          transform: translateX(0%) skewX(-25deg);
-          transition: transform .8s 0s $easing;
-          .arrow{
-            opacity: 0;
-          }
-          .logo-ref{
-            @media #{$large-up}{
-              transform: translateX(-50px) skewX(25deg);
-              transition: transform .5s 1.5s $easing;
-            }
-            @media #{$xlarge-up}{ transform: translateX(-150px) skewX(25deg); }
-          }
-        }
-      }
-      .right-mask{ left: 35%; }
-    }
-    &:nth-child(even){
-      .mask{ right: -200px; }
-      .pictures{
-        right: 150px;
-        transform: skewX(-25deg) translateX(80%);
-        .arrow{
-          position: absolute;
-          bottom: 10px;
-          left: 0;
-          font-size: 2.5em;
-          transform: skewX(25deg);
-          color: #eff0f1;
-          opacity: 1;
-          transition: opacity .3s 0s $easing;
-          animation: look-even 4s ease-out 0s infinite both;
-        }
-        .logo-ref{
-          @media #{$large-up} {
-            transform: translateX(0px) skewX(25deg);
-            transition: transform .5s 0s $easing;
-          }
-        }
-        &:hover{
-          transform: translateX(0%) skewX(-25deg);
-          transition: transform .8s 0s $easing;
-          .arrow{
-            opacity: 0;
-          }
-          .logo-ref{
-            @media #{$large-up}{
-              transform: translateX(50px) skewX(25deg);
-              transition: transform .5s 1.5s $easing;
-            }
-            @media #{$xlarge-up}{ transform: translateX(150px) skewX(25deg); }
-          }
-        }
-      }
-    }
-    .right-mask{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 60%;
-      height: 400px;
-      transform: skewX(-25deg);
-      background-color: #eff0f1;
-      .infos{
-        left: 0;
-        padding: 25px;
-        max-width: 90%;
-        transform: skewX(25deg);
-        .ref-btn-mobile{ display: inline-block; }
+  }
+
+  &:hover{
+    .bg{transform: scale(1.1);}
+    .mask{
+      clip-path: inset(0% 0% 0% 0%);
+      -moz-clip-path: inset(0% 0% 0% 0%);
+      -webkit-clip-path: inset(0% 0% 0% 0%);
+      .cover{
+        transform: scale(1.1);
       }
     }
   }
-}
-
-@media #{$xlarge-up} {
-  .ref{
-    &:nth-child(odd){
-      .mask{ left: -150px; }
-      .pictures{ left: 200px;}
-    }
-    &:nth-child(even){
-      .mask{ right: -150px; }
-      .pictures{ right: 200px; }
-    }
-  }
-}
-
-/*
-CSS SPECIFIQUE A CHAQUE REFERENCE POSITIONNING
-*/
-.pictures{
-  @media #{$small-up} { text-align: center;}
-  @media #{$large-up} { text-align: left; }
-
-  .logo-ref{
-    @media #{$small-up} { position: relative; margin-bottom: 20px; }
-    @media #{$large-up} { position: absolute; margin-bottom: 0; }
-  }
-  .maquette-ref{
-    @media #{$small-up} { position: relative; }
-    @media #{$large-up} { position: absolute; }
-  }
-}
-#vamos{
   .pictures{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
     .logo-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-up} { top: calc(50% - 26.5px); }
-      @media #{$large-only} {
-        right: 20px;
-        width:150px;
-      }
-      @media #{$xlarge-only} {
-        right: 30px;
-        width:250px;
-      }
+      vertical-align: middle;
     }
     .maquette-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-up} { top: -30px; }
-      @media #{$large-only} { height:90%; left: 100px; }
-      @media #{$xlarge-only} { left: 200px; }
+      position: relative;
+      top: -30px;
+      max-height: 100%;
+      vertical-align: middle;
+    }
+  }
+  .infos{
+    display: none;
+    position: relative;
+    color: #eff0f1;
+    p{
+      color: #eff0f1;
     }
   }
 }
-#amnesty{
-  .pictures{
-    .logo-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-up} { top: calc(50% - 53.5px); }
-      @media #{$large-only} {
-        left: 20px;
-        width:175px;
-      }
-      @media #{$xlarge-only} {
-        left: 30px;
-        width:250px;
-      }
-    }
-    .maquette-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-up} { top: -30px; }
-      @media #{$large-only} {  right: 100px; }
-      @media #{$xlarge-only} { right: 200px; }
-    }
-  }
-}
+
 #horizon{
-  .pictures {
-    .logo-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-up}{ top: calc(50% - 45px); }
-      @media #{$large-only} {
-        right: 20px;
-        width:150px;
-      }
-      @media #{$xlarge-only} {
-        right: 30px;
-        width:250px;
-      }
-    }
-    .maquette-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-up} { top: -30px; }
-      @media #{$large-only} {  height:85%; left: 90px; }
-      @media #{$xlarge-only} { left: 200px; }
-    }
-  }
-}
-#FFB-public{
-  .pictures{
-    .logo-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-only} {
-        top: calc(50% - 26px);
-        left: 20px;
-        width:150px;
-      }
-      @media #{$xlarge-only} {
-        top: calc(50% - 46px);
-        left: 30px;
-        width:250px;
-      }
-    }
-    .maquette-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-up} { top: -30px; }
-      @media #{$large-only} {  height:85%; right: 120px; }
-      @media #{$xlarge-only} { right: 200px; }
-    }
-  }
-}
-#FFB{
-  .pictures{
-    .logo-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-only} {
-        top: calc(50% - 26px);
-        right: 20px;
-        width:150px;
-      }
-      @media #{$xlarge-only} {
-        top: calc(50% - 46px);
-        right: 30px;
-        width:250px;
-      }
-    }
-    .maquette-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-up} { top: -30px; }
-      @media #{$large-only} {  height:85%; left: 120px; }
-      @media #{$xlarge-only} { left: 200px; }
-    }
-  }
-}
-#michelin{
-  .pictures{
-    .logo-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-only} {
-        top: calc(50% - 22.5px);
-        left: 20px;
-        width:150px;
-      }
-      @media #{$xlarge-only} {
-        top: calc(50% - 38px);
-        left: 30px;
-        width:250px;
-      }
-    }
-    .maquette-ref{
-      @media #{$small-up} {
-        top: 0;
-        left: auto;
-        right: auto;
-      }
-      @media #{$large-up} { top: -30px; }
-      @media #{$large-only} {  height:85%; right: 120px; }
-      @media #{$xlarge-only} { right: 200px; }
-    }
-  }
-}
-.IE {
-  &:not(#horizon){
-    .pictures .logo-ref{
-      top: 0!important;
-    }
-  }
-}
-/*
-CSS SPECIFIQUE A CHAQUE REFERENCE COLORS
-*/
-#vamos{
-  .pictures{ background-color: #eb6516; }
-  .ref-btn{
-    z-index: 12;
-    background-color: #2c313f;
-    &:hover{
-      background-color: #eb6516;
-      i{ color: #2c313f; }
-    }
-    i{ color: #eb6516; }
-  }
-  .right-mask .ref-btn-mobile span:before{
-    background-color: #eb6516;
-    color: #2c313f;
-  }
-}
-#amnesty{
-  .pictures{ background-color: #fef200; }
-  .pictures .arrow{ color: #2c313f; }
-  .ref-btn{
-    background-color: #2c313f;
-    &:hover{
-      background-color: #fef200;
-      i{ color: #2c313f; }
-    }
-    i{ color: #fef200; }
-  }
-  .right-mask .ref-btn-mobile span:before{
-    background-color: #fef200;
-    color: #2c313f;
-  }
-}
-#horizon{
-  .pictures{ background-color: #f3436c; }
+  .bg{ background-image: url(/assets/img/references/bg_horizon.png); }
+  .cover{ background-image: url(/assets/img/references/bg_horizon_blured.png); }
+
+  //.pictures{ background-color: #f3436c; }
   .logo-ref{ height: 90px;}
   .ref-btn{
     background-color: #d3d4d7;
     &:hover{
       background-color: #f3436c;
-      i{ color: #d3d4d7; }
+      i{ color: #eff0f1; }
     }
     i{ color: #f3436c; }
   }
   .right-mask .ref-btn-mobile span:before{
     background-color: #f3436c;
-    color: #d3d4d7;
-  }
-}
-#FFB-public{
-  .pictures{ background-color: #1bc7ad; }
-  .ref-btn{
-    background-color: #2c313f;
-    &:hover{
-      background-color: #1bc7ad;
-      i{ color: #2c313f; }
-    }
-    i{ color: #1bc7ad; }
-  }
-  .right-mask .ref-btn-mobile span:before{
-    background-color: #1bc7ad;
-    color: #2c313f;
-  }
-}
-#FFB{
-  .pictures{ background-color: #42b58e; }
-  .ref-btn{
-    background-color: #2c313f;
-    &:hover{
-      background-color: #42b58e;
-      i{ color: #2c313f; }
-    }
-    i{ color: #42b58e; }
-  }
-  .right-mask .ref-btn-mobile span:before{
-    background-color: #42b58e;
-    color: #2c313f;
-  }
-}
-#michelin{
-  .pictures{ background-color: #000099; }
-  .ref-btn{
-    background-color: #d3d4d7;
-    &:hover{
-      background-color: #000099;
-      i{ color: #d3d4d7; }
-    }
-    i{ color: #000099; }
-  }
-  .right-mask .ref-btn-mobile span:before{
-    background-color: #000099;
-    color: #d3d4d7;
+    color: #eff0f1;
   }
 }
