save work before reboot

--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -13,7 +13,30 @@
 	</header>
 	<section class="intro push-top {% if ress.isMobile ==  false %}desktop{% endif %}"></section>
 	<section class="content {% if ress.isMobile ==  false %}desktop{% endif %}">
-		<div id="horizon" class="large ref {% if browser.browser == "IE" %}IE {% endif %}">
+		<div id="vamos" class="ref">
+			<div class="wrapper">
+				<div class="bg"></div>
+				<div class="mask">
+					<div class="cover"></div>
+				</div>
+			</div>
+			<div class="pictures">
+				<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="Logo Vamos !">
+				<img class="maquette-ref" src="/assets/img/references/fiche-contact2.png" alt="Maquette Vamos">
+			</div>
+			<div class="infos">
+				<h2>Vamos</h2>
+				<p>
+					Vamos est le CRM-ERP (Solution logicielle de gestion commerciale et administrative) développé par Kilix pour Extia.
+					Pour ce projet Kilix a appliqué différentes stratégie agile, tels que la gestion par la valeur ou encore le pilotage de projets par les risques.<br>
+					Une équipe de 5 développeurs, 1 Scrum Master et 1 UI/UX Designer travail sur ce projet.
+					Il met en place des technologies qui ont fait leur preuves (Symfony, PostgreSQL) mais aussi des technologies plus récentes (NodeJS, ReactJS).
+					Pour s'adapter au mieux aux besoins du client.
+				</p>
+				{# <a href="http://cop21horizon.com/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a> #}
+			</div>
+		</div>
+		<div id="horizon" class="ref">
 			<div class="wrapper">
 				<div class="bg"></div>
 				<div class="mask">
@@ -25,17 +48,13 @@
 				<img class="maquette-ref" src="/assets/img/references/horizon-home.png" alt="Maquette Horizon">
 			</div>
 			<div class="infos">
-				<h3>Horizon</h3>
-				<h4>Développement du site Horizon lors de la COP21 pour l'école polytechnique de Lausanne</h4>
+				<h2>Horizon</h2>
 				<p>
-					L'objectif de Horizon est de développer un ensemble de plateformes permetant au public de disposer d'outils de visualisation des tendances sur les réseaux en temps réel. Dans cette optique, Kilix a développé la première plateforme de présentation des résultats d'analyse des réseaux sociaux pour la conférence Climat COP21.<br>
-					Une approche agile a aussi était utilisée pour ce projet qui été composé de 2 lead développeurs et 1 Scrum Master.<br>
-					{% if browser.browser == "IE" %}
-					<a href="http://cop21horizon.com/fr/" target="_blank" class="ref-btn-mobile buttonIE valeurIE enabled"><span data-hover="Vers le site">Vers le site</span></a>
-					{% else %}
-					<a href="http://cop21horizon.com/fr/" target="_blank" class="ref-btn-mobile button enabled"><span data-hover="Vers le site">Vers le site</span></a>
-					{% endif %}
+					L'objectif de Horizon est de développer un ensemble de plateformes permetant au public de disposer d'outils de visualisation des tendances sur les réseaux en temps réel.
+					Dans cette optique, Kilix a développé la première plateforme de présentation des résultats d'analyse des réseaux sociaux pour la conférence Climat COP21.<br>
+					Une approche agile a aussi était utilisée pour ce projet qui été composé de 2 lead développeurs et 1 Scrum Master.
 				</p>
+				<a href="http://cop21horizon.com/fr/" title="Allez vers le site" target="_blank" class="ref-btn-mobile enabled icon-link"></a>
 			</div>
 		</div>
 	</section>
