--- a/web/assets/scss/sections/references.scss
+++ b/web/assets/scss/sections/references.scss
@@ -1,4 +1,7 @@
-$easing: cubic-bezier(.55,0,.1,1);
+$easingIn: cubic-bezier(.4, 0 ,0 ,1);
+$easingOut: cubic-bezier(.4, 0 ,0 ,1);
+$duration: 1s;
+$delay: 0s;
 
 div.references{
   padding: 0!important;
@@ -15,6 +18,8 @@ div.references{
   background-color: #2c313f;
   color: #eff0f1;
   height: 500px;
+  margin-bottom: 100px;
+
   .wrapper{
     position: absolute;
     top: 0;
@@ -31,10 +36,10 @@ div.references{
     height: 100%;
     background-repeat: no-repeat;
     background-position: bottom center;
-    background-size: 100%;
+    background-size: cover;
     transform: scale(1);
     overflow: hidden;
-    transition: transform .8s .65s $easing;
+    transition: transform $duration $delay $easingOut;
   }
   .mask{
     position: absolute;
@@ -43,10 +48,8 @@ div.references{
     width: 100%;
     height: 100%;
     overflow: hidden;
-    clip-path: inset(0% 100% 0% 0%);
-    -moz-clip-path: inset(0% 100% 0% 0%);
-    -webkit-clip-path: inset(0% 100% 0% 0%);
-    transition: all .8s .65s $easing;
+    opacity: 0;
+    transition: opacity $duration $delay $easingOut;
     .cover{
       position: absolute;
       top: 0;
@@ -55,20 +58,23 @@ div.references{
       height: 100%;
       background-repeat: no-repeat;
       background-position: bottom center;
-      background-size: 100%;
+      background-size: cover;
       transform: scale(1);
-      transition: transform .8s .65s $easing;
+      transition: transform $duration $delay $easingOut;
     }
   }
 
   &:hover{
-    .bg{transform: scale(1.1);}
+    .bg{
+      transform: scale(1.1);
+      transition: transform $duration $delay $easingIn;
+    }
     .mask{
-      clip-path: inset(0% 0% 0% 0%);
-      -moz-clip-path: inset(0% 0% 0% 0%);
-      -webkit-clip-path: inset(0% 0% 0% 0%);
+      opacity: 1;
+      transition: opacity $duration $delay $easingIn;
       .cover{
         transform: scale(1.1);
+        transition: transform $duration $delay $easingIn;
       }
     }
   }
@@ -85,6 +91,7 @@ div.references{
     align-content: center;
     .logo-ref{
       vertical-align: middle;
+      max-width: 250px;
     }
     .maquette-ref{
       position: relative;
@@ -94,11 +101,58 @@ div.references{
     }
   }
   .infos{
-    display: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: center;
     position: relative;
+    height: 100%;
+    width: 60%;
+    margin: 0 auto;
+
+    z-index: 10;
     color: #eff0f1;
+    h2, p, a{
+      display: block;
+      margin: 10px 0;
+      opacity: 0;
+      transform: translateY(0px);
+    }
     p{
       color: #eff0f1;
+    }
+    .ref-btn-mobile{
+      display: inline-block;
+      position: relative;
+      width: 40px;
+      height: 40px;
+      line-height: 40px;
+      padding: 0 8px;
+      font-size: 1.5em;
+      background-color: #eff0f1;
+      text-align: center;
+      color: #2c313f;
+      overflow: hidden;
+      transition:color .3s $easingIn;
+      &:after{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform: translateX(-100%);
+        transition: transform .3s $easingIn;
+        background-color: #fff;
+        z-index: -1;
+      }
+      &:hover{
+        color: #eff0f1;
+        &:after{
+        transform: translateX(0%);
+        }
+      }
     }
   }
 }
@@ -109,16 +163,20 @@ div.references{
 
   //.pictures{ background-color: #f3436c; }
   .logo-ref{ height: 90px;}
-  .ref-btn{
-    background-color: #d3d4d7;
-    &:hover{
-      background-color: #f3436c;
-      i{ color: #eff0f1; }
-    }
-    i{ color: #f3436c; }
+  .ref-btn-mobile{
+    &:hover{ color: #eff0f1; }
+    &:after{ background-color: #f3436c; }
   }
-  .right-mask .ref-btn-mobile span:before{
-    background-color: #f3436c;
-    color: #eff0f1;
+}
+
+#vamos{
+  .bg{ background-image: url(/assets/img/references/bg_vamos.png); }
+  .cover{ background-image: url(/assets/img/references/bg_vamos_blured.png); }
+
+  //.pictures{ background-color: #eb6516; }
+  .logo-ref{ height: 90px;}
+  .ref-btn-mobile{
+    &:hover{ color: #eff0f1; }
+    &:after{ background-color: #eb6516; }
   }
 }
