work on reference page v2

--- a/views/references.html.twig
+++ b/views/references.html.twig
@@ -22,10 +22,10 @@
 			</div>
 			<div class="pictures">
 				<img class="logo-ref svg" src="/assets/img/references/w_logo_vamos.svg" alt="Logo Vamos !">
-				<img class="maquette-ref" src="/assets/img/references/fiche-contact2.png" alt="Maquette Vamos">
+				<img class="maquette-ref" src="/assets/img/references/fiche-contact2-test.png" alt="Maquette Vamos">
 			</div>
 			<div class="row">
-				<div class="infos large-6 columns">
+				<div class="infos">
 					<h2>Vamos</h2>
 					<p>
 						Vamos est le CRM-ERP (Solution logicielle de gestion commerciale et administrative) développé par Kilix pour Extia.
@@ -50,7 +50,7 @@
 				<img class="maquette-ref" src="/assets/img/references/amnesty-iphone.png" alt="Maquette Amnesty">
 			</div>
 			<div class="row">
-				<div class="infos large-6 columns">
+				<div class="infos">
 					<h2>Amnesty</h2>
 					<p>
 						Amnesty souhaite refondre sont site <a href="http://amnesty.fr">amnesty.fr</a>.
@@ -78,10 +78,10 @@
 			</div>
 			<div class="pictures">
 				<img class="logo-ref svg" src="/assets/img/references/horizon-logo.svg" alt="Logo COP 21">
-				<img class="maquette-ref" src="/assets/img/references/horizon-home.png" alt="Maquette Horizon">
+				<img class="maquette-ref" src="/assets/img/references/horizon-home-test.png" alt="Maquette Horizon">
 			</div>
 			<div class="row">
-				<div class="infos large-6 columns">
+				<div class="infos">
 					<h2>Horizon</h2>
 					<p>
 						L'objectif de Horizon est de développer un ensemble de plateformes permetant au public de disposer d'outils de visualisation des tendances sur les réseaux en temps réel.
