--- a/web/assets/scss/sections/references.scss
+++ b/web/assets/scss/sections/references.scss
@@ -3,6 +3,21 @@ $easingOut: cubic-bezier(.4, 0 ,0 ,1);
 $duration: 1s;
 $delay: 0s;
 
+$vamos-color: #eb6516;
+$amnesty-color: #fef200;
+$horizon-color: #f3436c;
+/*
+  UN JOUR ON POURRA S'EN SERVIR, MAIS PAS MAINTENANT CAR IL EXISTE UNE ABOMINATION APPELLE IE !!!!!!!
+  filter: blur(3px);
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -o-filter: blur(3px);
+  -ms-filter: blur(3px);
+  filter: url(../img/svg/blur.svg#blur);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Blur(pixelRadius=3, enabled='true')";
+  filter: progid:DXImageTransform.Microsoft.Blur(pixelRadius=3, enabled='true');
+*/
+
 div.references{
   padding: 0!important;
   .content{ background-image: linear-gradient(70deg,  rgba(236,236,245,1) 0%,rgba(236,236,245,1) 70%,rgba(230,230,237,1) 70%); }
@@ -10,148 +25,32 @@ div.references{
 }
 .landing-references{ background-image: url('../img/landing-bg-agile.jpg'); background-size: cover; background-position: 50% 50%; }
 
-.ref{
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #2c313f;
-  color: #eff0f1;
-  height: 500px;
-  margin-bottom: 100px;
 
-  .wrapper{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    overflow: hidden;
-  }
-  .bg{
-    position: absolute;
+@media #{$small-up}{
+  .ref{
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    transform: scale(1);
-    overflow: hidden;
-    transition: transform $duration $delay $easingOut;
-  }
-  .mask{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    opacity: 0;
-    transition: opacity $duration $delay $easingOut;
-    .cover{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: cover;
-      transform: scale(1);
-      transition: transform $duration $delay $easingOut;
-    }
-  }
+    height: auto;
+    background-color: #2c313f;
+    color: #eff0f1;
+    margin-bottom: 50px;
+    padding-bottom: 50px;
+    padding-top: 20px;
 
-  &:hover{
-    .bg{
-      transform: scale(1.1);
-      transition: transform $duration $delay $easingIn;
-    }
-    .mask{
-      opacity: 1;
-      transition: opacity $duration $delay $easingIn;
-      .cover{
-        transform: scale(1.1);
-        transition: transform $duration $delay $easingIn;
-      }
-    }
-  }
-  .pictures{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    text-align: center;
-    display:flex;
-    justify-content: space-around;
-    align-items: center;
-    align-content: center;
     .logo-ref{
-      vertical-align: middle;
-      max-width: 250px;
+      display: block;
+      max-width: 300px;
+      max-height: 250px;
+      margin: 0 auto;
+      margin-bottom: 25px;
     }
     .maquette-ref{
-      position: relative;
-      top: -30px;
-      max-height: 100%;
-      vertical-align: middle;
-    }
-  }
-  .row{height: 100%;}
-  .infos{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    position: relative;
-    height: 100%;
-    margin: 0 auto;
-
-    z-index: 10;
-    color: #eff0f1;
-    >h2,
-    >p,
-    >a,
-    >ul{
       display: block;
-      margin: 10px 0;
-      opacity: 0;
-      transform: translateY(0px);
-    }
-    p, ul{
-      color: #eff0f1;
-      a{
-        position: relative;
-        top: 3px;
-        text-decoration: none;
-        color: #eff0f1;
-        display: inline-block;
-        height: 20px;
-        line-height: 20px;
-        padding: 0 4px;
-        overflow: hidden;
-        transition: color .3s $easingIn;
-        &:after{
-          content: '';
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: #fff;
-          transform: translateX(-100%);
-          transition: transform .3s $easingIn;
-          z-index: -1;
-        }
-        &:hover{
-          &:after{
-            transform: translateX(0%);
-          }
-        }
-      }
+      margin: 0 auto;
+      max-width: 90%;
+      max-height: auto;
     }
     .ref-btn-mobile{
       display: inline-block;
@@ -185,6 +84,168 @@ div.references{
         }
       }
     }
+    .infos{
+      @include grid-column(12);
+      color: #eff0f1;
+      p, ul{
+        color: #eff0f1;
+      }
+    }
+  }
+}
+
+@media #{$large-up}{
+  .ref{
+    height: 500px;
+    .wrapper{
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      overflow: hidden;
+      .bg{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        transform: scale(1);
+        overflow: hidden;
+        transition: transform $duration $delay $easingOut;
+      }
+      .mask{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        opacity: 0;
+        transition: opacity $duration $delay $easingOut;
+        .cover{
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-repeat: no-repeat;
+          background-position: center center;
+          background-size: cover;
+          transform: scale(1);
+          transition: transform $duration $delay $easingOut;
+        }
+      }
+    }
+
+    &:hover{
+      .bg{
+        transform: scale(1.1);
+        transition: transform $duration $delay $easingIn;
+      }
+      .mask{
+        opacity: 1;
+        transition: opacity $duration $delay $easingIn;
+        .cover{
+          transform: scale(1.1);
+          transition: transform $duration $delay $easingIn;
+        }
+      }
+    }
+    .pictures{
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      text-align: center;
+      display:flex;
+      justify-content: space-around;
+      align-items: center;
+      align-content: center;
+
+      .logo-ref{
+        vertical-align: middle;
+        max-width: 250px;
+      }
+      .maquette-ref{
+        position: relative;
+        top: -30px;
+        vertical-align: middle;
+      }
+    }
+    .row{height: 100%;}
+    .infos{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      position: relative;
+      height: 100%;
+      margin: 0 auto;
+      @include grid-column(5);
+
+      z-index: 10;
+      color: #eff0f1;
+      >h2,
+      >p,
+      >a,
+      >ul{
+        display: block;
+        margin: 10px 0;
+        opacity: 0;
+        transform: translateY(0px);
+      }
+      p, ul{
+        color: #eff0f1;
+        a{
+          position: relative;
+          top: 3px;
+          text-decoration: none;
+          color: #eff0f1;
+          display: inline-block;
+          height: 20px;
+          line-height: 20px;
+          padding: 0 4px;
+          overflow: hidden;
+          transition: color .3s $easingIn;
+          &:after{
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+            transform: translateX(-100%);
+            transition: transform .3s $easingIn;
+            z-index: -1;
+          }
+          &:hover{
+            &:after{
+              transform: translateX(0%);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media #{$large-up} {
+  .maquette-ref{
+    max-width: 50%;
+    max-height: auto;
+  }
+}
+
+@media #{$xlarge-up} {
+  .maquette-ref{
+    max-width: auto;
+    max-height: 100%;
   }
 }
 
@@ -192,43 +253,49 @@ div.references{
 #vamos{
   .bg{ background-image: url(/assets/img/references/bg_vamos.png); }
   .cover{ background-image: url(/assets/img/references/bg_vamos_blured.png); }
-
-  //.pictures{ background-color: #eb6516; }
   .logo-ref{ height: 90px;}
   .ref-btn-mobile{
     &:hover{ color: #eff0f1; }
-    &:after{ background-color: #eb6516; }
+    &:after{ background-color: $vamos-color; }
   }
+  @media #{$small-up}{ .infos{ color: $vamos-color; } }
+  @media #{$large-up}{ .infos{ color: #eff0f1; } }
 }
 #amnesty{
   .bg{ background-image: url(/assets/img/references/bg_amnesty.png); }
   .cover{ background-image: url(/assets/img/references/bg_amnesty_blured.png); }
-
-  //.pictures{ background-color: #fef200; }
   .logo-ref{ height: 90px;}
   .infos{
     p, ul{
       a{
         color: #FFF;
         &:hover{color: #000;}
-        &:after{background-color: #fef200;}
+        &:after{background-color: $amnesty-color;}
       }
     }
   }
   .ref-btn-mobile{
     &:hover{ color: #eff0f1; }
-    &:after{ background-color: #fef200; }
+    &:after{ background-color: $amnesty-color; }
+  }
+  @media #{$small-up}{ .infos{ color: $amnesty-color; } }
+  @media #{$large-up}{
+    .infos{
+      @include grid-column(6);
+      color: #eff0f1;
+    }
   }
 }
 
 #horizon{
   .bg{ background-image: url(/assets/img/references/bg_horizon.png); }
   .cover{ background-image: url(/assets/img/references/bg_horizon_blured.png); }
-
-  //.pictures{ background-color: #f3436c; }
   .logo-ref{ height: 90px;}
   .ref-btn-mobile{
     &:hover{ color: #eff0f1; }
-    &:after{ background-color: #f3436c; }
+    &:after{ background-color: $horizon-color; }
   }
+  @media #{$small-up}{ .infos{ color: $horizon-color; } }
+  @media #{$large-up}{ .infos{ color: #eff0f1; } }
 }
+
